--- a/front/css/style.css
+++ b/front/css/style.css
@@ -91,3 +91,18 @@ padding: 15px 10px;
 .redColor{
 	color: #ea4027;
 }
+/*********
+*圆形图片
+*********/
+.imgCircle{
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	-moz-border-radius:50%;
+	-ms-border-radius:50%; /* IE 9 */
+	-webkit-border-radius:50%; /* Safari and Chrome */
+	-o-border-radius:50%;/* Opera */
+	/*overflow: hidden;*/
+	/*background: url('../images/user.jpg');
+	background-size: 100%;*/
+}
