--- a/front/css/audio.css
+++ b/front/css/audio.css
@@ -1,6 +1,3 @@
-/******
-  WYW
-******/
 *{
 	margin: 0;
 	padding: 0;
@@ -11,16 +8,16 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,.5);
+	
 }
 
 .song_wrap{
 	position: relative;
-	padding: 15px;
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: flex;
-	background-color: rgba(0,0,0,.1);	
+	/*background-color: rgba(0,0,0,.1);	*/
+	border-bottom: 1px solid rgba(117,107,107,0.4);
 }
 
 .song_poster{
@@ -37,14 +34,19 @@
 	-webkit-box-flex: 1;
 	-webkit-flex: 1;
 	flex: 1;
-	padding: 15px 0 0 15px;
-	color: #fff;
+	padding: 12px 0 12px 12px;
+	color: #333;
+	text-align: center;
 }
 .song_content .name{
-	font-size: 18px;	
+	font-size: 20px;	
+	font-weight: bold;
+
+
 }
 .song_content .singer{
-	font-size: 14px;	
+	font-size: 18px;
+	color:#959595;	
 }
 
 .song_handle{
@@ -86,6 +88,7 @@
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: flex;
+	background-color: rgba(0,0,0,.5);
 }
 .progressbar .start_time, .progressbar .end_time{
 	width: 55px;
@@ -166,4 +169,14 @@
 }
 .lyric p.current{
 	color: #f60;
+}
+
+.feng{
+	text-align: center;
+	width: 80%;
+	margin:0 auto;
+	margin-top: 30px;
+}
+.biao{
+	color:#333;
 }
