WYW--我的页添加“关注”“粉丝”链接

--- a/front/css/style.css
+++ b/front/css/style.css
@@ -10,6 +10,9 @@
 .whiteBGColor{
 	background: #ffffff;
 }
+.grayBGColor{
+	background: #E0E0E0;
+}
 /*facebook-card*/
 .card-header{
 	height: 54px;
